Add verbosity stream
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(util trace.cpp debug.cpp name.cpp exception.cpp)
+add_library(util trace.cpp debug.cpp name.cpp exception.cpp verbosity.cpp)
