--- a/src/numerics/CMakeLists.txt
+++ b/src/numerics/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(numerics gmp_init.cpp mpz.cpp mpq.cpp mpbq.cpp)
+add_library(numerics gmp_init.cpp mpz.cpp mpq.cpp mpbq.cpp numeric_traits.cpp)
