tests(python): add tests for python binding
You can add ``.py`` tests for python binding at ``tests/python/``. For instance,
we have ``tests/python/is_var.py``:

```
import lean
x = lean.mk_var(0)
print(lean.is_var(x))
```

It uses the return value of python interpreter to determine whether a
test is passed or not. In addition to that, we check whether the result
output contains "swig/python detected a memory leak of type" or not. If
so, we report a memory-leak.

Python tests have the label ``python`` which can be used by ctest:

```
ctest -L python
```

--- a/src/frontends/python/CMakeLists.txt
+++ b/src/frontends/python/CMakeLists.txt
@@ -1,1 +1,12 @@
-# Somehow we need this file
+# Python Binding Tests
+file(GLOB PYTESTS "${LEAN_SOURCE_DIR}/../tests/python/*.py")
+FOREACH(T ${PYTESTS})
+  GET_FILENAME_COMPONENT(T_NAME ${T} NAME)
+  add_test(NAME "pytest_${T_NAME}"
+    WORKING_DIRECTORY "${LEAN_SOURCE_DIR}/../tests/python"
+    COMMAND "./test_single.sh" "${PYTHON_EXECUTABLE}" ${T_NAME})
+  # Set Label
+  set_tests_properties("pytest_${T_NAME}" PROPERTIES LABELS "python")
+  # Set ENV Variable "PYTHONPATH"
+  set_tests_properties("pytest_${T_NAME}" PROPERTIES ENVIRONMENT "PYTHONPATH=${LEAN_BINARY_DIR}")
+ENDFOREACH(T)
