chore(frontends/python): move frontend.i to expr.i
This allows us to build a number of *.i files which will be included in
one large lean.i file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -268,7 +268,7 @@ add_test(NAME style_check COMMAND ${LEAN_SOURCE_DIR}/cmake/Modules/cpplint.py ${
 # Python Binding with SWIG
 if("${PY_BINDINGS}" MATCHES "ON")
   add_subdirectory(frontends/python)
-  set(PY_IFACE_FILES "${LEAN_SOURCE_DIR}/frontends/python/frontend.i")
+  set(PY_IFACE_FILES "${LEAN_SOURCE_DIR}/frontends/python/expr.i")
   FIND_PACKAGE(SWIG REQUIRED)
   INCLUDE(${SWIG_USE_FILE})
   FIND_PACKAGE(PythonLibs 2.7)
@@ -276,6 +276,6 @@ if("${PY_BINDINGS}" MATCHES "ON")
   SET(CMAKE_SWIG_FLAGS "-Wall")
   SET_SOURCE_FILES_PROPERTIES(${PY_IFACE_FILES} PROPERTIES CPLUSPLUS ON)
   SET_SOURCE_FILES_PROPERTIES(${PY_IFACE_FILES} PROPERTIES SWIG_FLAGS "-includeall")
-  SWIG_ADD_MODULE(lean python ${PY_IFACE_FILES})
-  SWIG_LINK_LIBRARIES(lean ${PYTHON_LIBRARIES} ${LEAN_LIBS})
+  SWIG_ADD_MODULE(expr python ${PY_IFACE_FILES})
+  SWIG_LINK_LIBRARIES(expr ${PYTHON_LIBRARIES} ${LEAN_LIBS})
 endif()
